--- a/force-app/main/default/lwc/boatTile/boatTile.html
+++ b/force-app/main/default/lwc/boatTile/boatTile.html
@@ -2,27 +2,45 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 03-08-2025
+  @last modified on  : 03-13-2025
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
   <div onclick={selectBoat} class={tileClass}>
-    <div style={backgroundStyle} class="tile"></div>
-    <div class="lower-third">
-      <!-- Boat information goes here -->
-      <h1 class="slds-truncate slds-text-heading_medium">{boat.Name}</h1>
-      <h2 class="slds-truncate slds-text-heading_small">
-        {boat.Contact__r.Name}
-      </h2>
-      <div class="slds-text-body_small">
-        Price:
+    <!-- Chips -->
+    <div class="tile-badges">
+      <!-- Boat length -->
+      <lightning-badge
+        label={boatLength}
+        class="slds-truncate slds-badge_lightest tile-badge"
+      ></lightning-badge>
+
+      <!-- Boat type -->
+      <lightning-badge
+        label={boat.BoatType__r.Name}
+        class="slds-truncate slds-badge_lightest tile-badge"
+      ></lightning-badge>
+    </div>
+
+    <!-- Picture -->
+    <div style={backgroundStyle} class="tile-image"></div>
+
+    <!-- Information -->
+    <div class="tile-info">
+      <div>
+        <h1 class="slds-truncate slds-text-large">{boat.Name}</h1>
+        <h2 class="slds-truncate slds-text-heading_small">
+          {boat.Contact__r.Name} | 2016
+        </h2>
+      </div>
+      <div class="slds-text-large" style="font-weight: bold">
+        $
         <lightning-formatted-number
           value={boat.Price__c}
           maximum-fraction-digits="2"
         ></lightning-formatted-number>
+        <span style="font-size: 10px; margin-left: 5px">usd</span>
       </div>
-      <div class="slds-text-body_small">Length: {boat.Length__c}</div>
-      <div class="slds-text-body_small">Type: {boat.BoatType__r.Name}</div>
     </div>
   </div>
 </template>
