Enhance boatTile and boatSearchResults components with improved layout and styling

--- a/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
+++ b/force-app/main/default/lwc/boatSearchResults/boatSearchResults.html
@@ -16,6 +16,7 @@
           <lightning-layout
             horizontal-align="center"
             multiple-rows
+            style="align-items: stretch;"
           >
             <!-- template looping through each boat -->
             <template for:each={boats} for:item="boat">
