--- a/force-app/main/default/lwc/similarBoats/similarBoats.html
+++ b/force-app/main/default/lwc/similarBoats/similarBoats.html
@@ -2,12 +2,12 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 03-09-2025
+  @last modified on  : 03-13-2025
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
   <lightning-card title={getTitle} icon-name="custom:custom54">
-    <lightning-layout multiple-rows="true">
+    <lightning-layout multiple-rows="true" style="align-items: stretch" class="similar-boat-layout">
       <!-- If there are no similar boats to display -->
       <template if:true={noBoats}>
         <p class="slds-align_absolute-center">
