--- a/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
+++ b/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
@@ -2,19 +2,50 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 03-08-2025
+  @last modified on  : 03-17-2025
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
-  <lightning-layout class="slds-grid slds-grid_align-center">
-    <lightning-layout-item>
-      <lightning-combobox
-        name="boatType"
-        placeholder="Select boat type"
-        value={selectedBoatTypeId}
-        options={searchOptions}
-        onchange={handleSearchOptionChange}
-      ></lightning-combobox>
+  <lightning-layout
+    class="form-container"
+    multiple-rows
+    vertical-align="center"
+  >
+    <!-- Search container -->
+    <lightning-layout-item class="search-container">
+      <!-- Search by boat name -->
+      <lightning-input
+        class="search-input"
+        name="boatName"
+        label="Search when user hits the 'enter' key"
+        type="search"
+        onkeyup={handleSearchInputKeyUp}
+      ></lightning-input>
+
+      <!-- Filters toggle button -->
+      <lightning-button-icon
+        class="slds-p-bottom_xxx-small"
+        variant="brand"
+        title="Filters"
+        alternative-text="Filters"
+        type="button"
+        icon-name="utility:filterList"
+        onclick={handleFiltersToggle}
+      ></lightning-button-icon>
     </lightning-layout-item>
+
+    <!-- Search by boat type -->
+    <template if:true={isFiltersVisible}>
+      <lightning-layout-item>
+        <lightning-combobox
+          name="boatType"
+          label="Search by boat type"
+          placeholder="Select boat type"
+          value={selectedBoatTypeId}
+          options={searchOptions}
+          onchange={handleSearchOptionChange}
+        ></lightning-combobox>
+      </lightning-layout-item>
+    </template>
   </lightning-layout>
 </template>
