--- a/force-app/main/default/lwc/boatTile/boatTile.html
+++ b/force-app/main/default/lwc/boatTile/boatTile.html
@@ -2,7 +2,7 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 03-13-2025
+  @last modified on  : 03-30-2025
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
@@ -32,7 +32,7 @@
         <h1 class="slds-truncate slds-text-large">{boat.Name}</h1>
         <!-- Boat owner and year -->
         <h2 class="slds-truncate slds-text-heading_small">
-          {boat.Contact__r.Name} &#x2022; 2016
+          {boat.Contact__r.Name} &#x2022; {boat.Year_Built__c}
         </h2>
       </div>
       <!-- Price -->
