Update boatSearchForm and multiSlider components with title enhancements and test cases
- Updated boatSearchForm.html to include titles for length and year built sliders.
- Modified multiSlider.html to dynamically display the title in the label.
- Added a default title property to multiSlider.js for better customization.
- Enhanced multiSlider.test.js with additional test cases for title rendering and slider functionality.
- Updated package-lock.json to reflect dependency upgrades.

--- a/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
+++ b/force-app/main/default/lwc/boatSearchForm/boatSearchForm.html
@@ -2,7 +2,7 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 03-30-2025
+  @last modified on  : 04-03-2025
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
@@ -64,6 +64,7 @@
           step="1"
           start={lengthRange.min}
           end={lengthRange.max}
+          title="Length"
           onchange={handleLengthChange}
         ></c-multi-slider>
 
@@ -74,6 +75,7 @@
           step="1"
           start={yearBuiltRange.min}
           end={yearBuiltRange.max}
+          title="Year Built"
           onchange={handleYearBuiltChange}
         ></c-multi-slider>
       </lightning-layout-item>
