--- a/force-app/main/default/lwc/multiSlider/multiSlider.html
+++ b/force-app/main/default/lwc/multiSlider/multiSlider.html
@@ -2,7 +2,7 @@
   @description       : 
   @author            : ChangeMeIn@UserSettingsUnder.SFDoc
   @group             : 
-  @last modified on  : 04-03-2025
+  @last modified on  : 04-06-2025
   @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 -->
 <template>
@@ -10,7 +10,7 @@
   <div class="slds-form-element" onmouseup={onMouseUp}>
     <!-- Label -->
     <label class="slds-form-element__label slds-grid" for="input">
-      <span class="slds-col">{title} Range {rangeValue}</span>
+      <span class="slds-col"><b>{title} Range</b> {rangeValue}</span>
       <span class="slds-slider-label__range slds-col_bump-left"
         >{min}-{max}</span
       >
